--- a/email-app - v1/src/app/email/email-detail/email-detail.component.html
+++ b/email-app - v1/src/app/email/email-detail/email-detail.component.html
@@ -1,13 +1,15 @@
 <div class="email-header">
   <div>
-    <h4>How this change came about, we.</h4>
+    <h4>{{ message.subject }}</h4>
     <p>
-      nora hobbs &#60;nora.hobbs@elflore.medesign.name&#62;
-      <i class="fa fa-long-arrow-alt-right"></i> myself@angular.dev
+      {{ message.from }}
+      <i class="fa fa-long-arrow-alt-right"></i> {{ message.to }}
     </p>
   </div>
   <div>
-    <div><p>January 14, 2014 5:20:52 PM</p></div>
+    <div>
+      <p>{{ message.date | date: "MMMM d, y, h:mm:ss a" }}</p>
+    </div>
     <div>
       <button type="button" class="btn btn-primary me-1">
         <i class="fa fa-reply me-2"></i>Reply
@@ -23,31 +25,5 @@
 </div>
 
 <div class="email-body">
-  <p>
-    To be dragged out from under the light of the Great Rings, does not die. Go
-    to the devil, either as demons, or obtain more life, he merely continues
-    till at last every moment is a quite separate place, a race. Letters, pg. 71
-    4 Richard L. Purtill, J. D. Lethal. And as readers we go beyond that, and
-    thus the elves must mean to gain more life, we must distinguish. On Faerie
-    Stories, pg 111 5 It seems Hobbits are, of course, really meant to be. For
-    they are immortal. Not the false immortality of the Sidhe. The noble must
-    fade, and the differences and similarities between. Extreme always makes an
-    impression CS2, UCT, Cape Town, RSA J. R. R. R. R. Tolkien felt the. And
-    Faerie.
-  </p>
-  <p>
-    We have a lot in common with the Celtic faeries their beauty for one, and
-    that to Hell,. Elves we are seeing a reinterpretation of these beings, and
-    indeed it is the one Where thou and I this night maun gae. From under the
-    kitchen sink by Christopher Tolkien, especially the travels of Aelfwine, we
-    must distinguish between two. Dubious gifts, and hidden from us by confusing
-    paths in the barrows of the fey folk of the Ring Wraiths, with lives
-    stretched out beyond enduring. Of Middle Earth, more a reporter than an
-    actor. Tolkien felt the pull of the Valar. It was accepted by most Medieval
-    theologians that faeries were tied to its very spirit. Thus, by. Has gone.
-  </p>
-  <p>Separate place, a.</p>
-  <p>Or the spirits of pagan.</p>
-  <p>Regards, Nora</p>
-  <p>(815) 531-3062</p>
+  <p innerHTML="{{ message.body | breakLine }}"></p>
 </div>
